--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,15 +17,25 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
+[target.'cfg(windows)'.dependencies.windows]
+version = "^0.62"
+features = [
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_System_SystemInformation",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Input_KeyboardAndMouse",
+]
+
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-x-win = "5.3.3"
-zbus = "5.12.0"
-trawlcat = "0.2.11"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
-tokio = { version = "1", features = ["full"] } # Tauri includes this, but good to be explicit
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
+tokio = { version = "^1.19", features = ["full"] } # Tauri includes this, but good to be explicit
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
 chrono = "0.4.42"
+sysinfo = "^0" # Needed only for windows, but might be useful even on linux
+arc-swap = "1.7.0"
+
