--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,7 +35,6 @@ serde = { version = "1", features = ["derive"] }
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tokio = { version = "^1.19", features = ["full"] } # Tauri includes this, but good to be explicit
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features = ["serde"] }
 sysinfo = "^0" # Needed only for windows, but might be useful even on linux
 arc-swap = "1.7.0"
-
