--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,3 +38,4 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqli
 chrono = { version = "0.4.42", features = ["serde"] }
 sysinfo = "^0" # Needed only for windows, but might be useful even on linux
 arc-swap = "1.7.0"
+sqlx-cli = "0.8.6"
