--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "~2",
     "dayjs": "^1.11.19",
-    "moment": "^2.30.1"
+    "frappe-gantt": "^1.0.4",
+    "moment": "^2.30.1",
+    "svelte-gantt": "^4.5.0",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
