--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@amcharts/amcharts5": "^5.14.4",
     "@js-temporal/polyfill": "^0.5.1",
+    "@svar-ui/svelte-gantt": "^2.4.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "~2",
     "dayjs": "^1.11.19",
+    "eslint-plugin-neverthrow": "^1.1.4",
     "frappe-gantt": "^1.0.4",
     "moment": "^2.30.1",
+    "neverthrow": "^8.2.0",
     "svelte-gantt": "^4.5.0",
     "vite-plugin-css-injected-by-js": "^3.5.2"
   },
