--- a/package.json
+++ b/package.json
@@ -14,29 +14,24 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@amcharts/amcharts5": "^5.14.4",
     "@js-temporal/polyfill": "^0.5.1",
-    "@svar-ui/svelte-gantt": "^2.4.3",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-sql": "~2",
-    "dayjs": "^1.11.19",
+    "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-fs": "~2.4.4",
+    "@tauri-apps/plugin-opener": "^2.5.2",
+    "@tauri-apps/plugin-sql": "~2.3.1",
     "eslint-plugin-neverthrow": "^1.1.4",
-    "frappe-gantt": "^1.0.4",
     "moment": "^2.30.1",
-    "neverthrow": "^8.2.0",
-    "svelte-gantt": "^4.5.0",
     "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tauri-apps/cli": "^2",
-    "sass-embedded": "^1.93.3",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.49.2",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@tauri-apps/cli": "^2.9.6",
+    "sass-embedded": "^1.97.1",
+    "svelte": "^5.46.1",
+    "svelte-check": "^4.3.5",
+    "typescript": "~5.6.3",
+    "vite": "^6.4.1"
   }
 }
