--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,8 @@ features = [
 ]
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
+tauri-plugin-shell = "^2.0.0"
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
